动手学深度学习第一章第一节

--- a/test/Untitled.ipynb
+++ b/test/Untitled.ipynb
@@ -195,6 +195,87 @@
     "z = torch.cat((x,y),dim = 0)\n",
     "z"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89231b45-5d4c-4253-ba0b-8365c88fff06",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0ed49df8-9da5-467f-ace4-779d1682248e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([6, 4])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "189f3959-02c8-41a0-ae8d-f85f1388bec6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.numel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4e33cd71-62e4-4d87-8243-44ac80289853",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.numel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1039bec-c3df-4f91-a266-8a56ee17e274",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
