动手学深度学习第一章第二节

--- a/test/Untitled.ipynb
+++ b/test/Untitled.ipynb
@@ -2,138 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "95eb3f16-554f-4475-a057-10ec05674837",
+   "execution_count": 8,
+   "id": "4f834614-6356-410d-8023-6f4b4fe13956",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "os.makedirs(os.path.join('..', 'data'), exist_ok=True)\n",
+    "data_file = os.path.join('..', 'data', 'house_tiny.csv')\n",
+    "with open(data_file, 'w') as f:\n",
+    "    f.write('NumRooms,Alley,Price\\n')  # 列名\n",
+    "    f.write('NA,Pave,127500\\n')  # 每行表示一个数据样本\n",
+    "    f.write('2,NA,106000\\n')\n",
+    "    f.write('4,NA,178100\\n')\n",
+    "    f.write('NA,NA,140000\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "58136c83-a6f4-4bc5-b781-6dad5c5c2ea8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x = torch.arange(1,12)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "1f3e6156-e32b-4f2d-9787-6a798670f78a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([11])"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ca06e677-054a-4899-8c94-beeaba50b517",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "RuntimeError",
-     "evalue": "shape '[3, 4]' is invalid for input of size 11",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m4\u001b[39m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: shape '[3, 4]' is invalid for input of size 11"
-     ]
-    }
-   ],
-   "source": [
-    "x = x.reshape(3,4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "a8a4d1ed-9930-4ef2-810a-9fd627de97e4",
+   "execution_count": 9,
+   "id": "a049e65f-63c6-45ab-9d60-e5f50b104aad",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])\n",
-      "tensor([[ 0,  1,  2,  3],\n",
-      "        [ 4,  5,  6,  7],\n",
-      "        [ 8,  9, 10, 11]])\n"
+      "   NumRooms Alley   Price\n",
+      "0       NaN  Pave  127500\n",
+      "1       2.0   NaN  106000\n",
+      "2       4.0   NaN  178100\n",
+      "3       NaN   NaN  140000\n"
      ]
     }
    ],
    "source": [
-    "x = torch.arange(0,12)\n",
-    "print(x)\n",
-    "x = x.reshape(3,4)\n",
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "95d4f3ea-b6c1-4aeb-a515-fae3c2330c9a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[2, 1, 4, 3],\n",
-       "        [1, 2, 3, 4],\n",
-       "        [4, 3, 2, 1]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "torch.tensor([[2, 1, 4, 3], [1, 2, 3, 4], [4, 3, 2, 1]])"
+    "data = pd.read_csv(data_file)\n",
+    "print(data)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "26b0829a-33cf-4430-8caa-f730899f9301",
+   "id": "b027f19d-a06a-4c76-ab05-c730b9551f42",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[1, 1, 1, 1],\n",
-       "        [1, 1, 1, 1],\n",
-       "        [1, 1, 1, 1]])"
+       "pandas.core.frame.DataFrame"
       ]
      },
      "execution_count": 10,
@@ -142,140 +61,8 @@
     }
    ],
    "source": [
-    "torch.tensor([[1,1,1,1],[1,1,1,1],[1,1,1,1]])"
+    "type(data)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "cf0e37c5-1d61-4ecd-a9e7-6d0ecffb68ff",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[11, 12, 13, 14],\n",
-       "        [15, 16, 17, 18],\n",
-       "        [19, 20, 21, 22]])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y = torch.arange(11,23).reshape(3,4)\n",
-    "y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "df06fd84-d8fb-4f6e-b929-08c68fc2fd22",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([[ 0,  1,  2,  3],\n",
-       "        [ 4,  5,  6,  7],\n",
-       "        [ 8,  9, 10, 11],\n",
-       "        [11, 12, 13, 14],\n",
-       "        [15, 16, 17, 18],\n",
-       "        [19, 20, 21, 22]])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z = torch.cat((x,y),dim = 0)\n",
-    "z"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "89231b45-5d4c-4253-ba0b-8365c88fff06",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
-   "source": [
-    "z.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "0ed49df8-9da5-467f-ace4-779d1682248e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([6, 4])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "189f3959-02c8-41a0-ae8d-f85f1388bec6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.numel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "4e33cd71-62e4-4d87-8243-44ac80289853",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "24"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "z.numel()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1039bec-c3df-4f91-a266-8a56ee17e274",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
